--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,7 +17,7 @@ spec:
         prometheus.io/port: '5000'  # The port on which the app is exposing metrics.
     spec:
       containers:
-      - name: myflaskapp-container
+      - name: myflaskapp
         image: myflaskapp:latest  # Ensure this matches the image name you built.
         imagePullPolicy: IfNotPresent  # Use the locally available image, if present.
         ports:
